--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ numpy = "1.23.4"
 matplotlib = "3.6.2"
 dataconf = "3.0.0"
 PyPDF2 = "2.10.0"
+python-magic = "0.4.27"
 
 [requires]
 python_version = "3.9"
