--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-pytest = "7.4.4"
+pytest = "8.4.1"
+pytest-mock = "3.14.1"
 
 [packages]
 numpy = "1.23.4"
